--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,3 +1,7 @@
+backend:
+  name: git-gateway
+  branch: main # Branch to update (optional; defaults to master)
+
 media_folder: "src/assets/uploads" # Location where files will be stored in the repo
 public_folder: "src/assets/uploads" # The src attribute for uploaded media
 
