update collection schema

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -6,7 +6,7 @@ media_folder: "src/assets/uploads" # Location where files will be stored in the 
 public_folder: "src/assets/uploads" # The src attribute for uploaded media
 
 collections:
-  - name: "blog" # Used in routes, e.g., /admin/collections/blog
+  - name: "blog"
     label: "Blog" # Used in the UI
     folder: "src/content/blog" # The path to the folder where the documents are stored
     create: true # Allow users to create new documents in this collection
